# basic-rust-api

./: .gitignore  Cargo.toml
.sqlx/: query-5d3f35a4118f4cff23e40fdb7b11012b2ace0f775c4147b17b5789257573d34e.json  query-8469792bd25d902d0508337a071a9c6a7baa3897e2f8fba279233cefdb2514e3.json
src/: main.rs
src/auth/: handler.rs  mod.rs  models.rs  service.rs
src/db/: mod.rs  sql_connection.rs  user_db.rs
src/db/migrations/: 0001_usertable.sql
src/handlers/: user.rs
src/models/: user.rs
src/routes/: auth.rs  users.rs
src/services/: user_service.rs
src/utils/: crypto_utils.rs  mod.rs  token_utils.rs
