[package]
name = "basic-rust-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-web-httpauth = "0.8.2"
bcrypt = "0.17.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["mysql" ,"runtime-async-std"] }
chrono = "0.4.41"
jsonwebtoken = "9.3.1"

